--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ layout: default
                 <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
                         rotateInUpLeft;">
                     <h2><span>Software Developer</span></h2>
-                    <p><span>In Netease game, I learned
-                        game service system and use Python code for ops.</span></p>
+                    <p><span>TODO
+                        TODO</span></p>
                     <span class="vertical-date"><span>Apr. 2016</span> <br>
                     <small><span>CGI Suomi Oy</span></small> </span>
                 </div>
@@ -69,8 +69,8 @@ layout: default
                 <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
                         rotateInUpLeft;">
                     <h2><span>B.Sc. in Software Engineering</span></h2>
-                    <p><span>In Netease game, I learned
-                        game service system and use Python code for ops.</span></p>
+                    <p><span>TODO
+                        TODO</span></p>
                     <span class="vertical-date"><span>Apr. 2016</span> <br>
                     <small><span>Metropolia University of Applied Sciences</span></small> </span>
                 </div>
@@ -93,8 +93,7 @@ layout: default
                 <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
                         rotateInUpLeft;">
                     <h2><span>Web Developer and SEO Consultant</span></h2>
-                    <p><span>In Netease game, I learned
-                        game service system and use Python code for ops.</span></p>
+                    <p><span>TODO TODO</span></p>
                     <span class="vertical-date"><span>Apr. 2016</span> <br>
                     <small><span>NetBooster Finland Oy</span></small> </span>
                 </div>
@@ -117,8 +116,8 @@ layout: default
                 <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
                         rotateInUpLeft;">
                     <h2><span>Misc. Techie stuff</span></h2>
-                    <p><span>In Netease game, I learned
-                        game service system and use Python code for ops.</span></p>
+                    <p><span>TODO
+                        TODO</span></p>
                     <span class="vertical-date"><span>Apr. 2016</span> <br>
                     <small><span>Various companies</span></small> </span>
                 </div>
