Timeline dates and icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
                 <img src="/img/profiili-square.jpg" alt="Avatar" style="width:60px; margin-right: 16px!important; border-radius: 50%!important; float: left!important; margin-bottom: -5px; border-style: none;">
                 <p style="display: block; -webkit-margin-before: 1em; -webkit-margin-after: 1em; -webkit-margin-start: 0px; -webkit-margin-end: 0px;">Lead Developer at Sysart Oy. <br /> <em>Clean Code, Agile Methodologies, Communication, Frontend, Backend...</em></p><br>
             </div>
-            <button style="color: #fff!important; background-color: #616161!important; transition: background-color .3s,color .15s,box-shadow .3s,opacity 0.3s; width: 100%; border: none; display: inline-block; outline: 0; padding: 6px 16px; vertical-align: middle; overflow: hidden; text-decoration: none!important;">+ Connect</button>
+            <a href="https://www.linkedin.com/in/pekka-astala-6376128" style="color: #fff!important; background-color: #616161!important; transition: background-color .3s,color .15s,box-shadow .3s,opacity 0.3s; width: 100%; border: none; display: inline-block; outline: 0; padding: 6px 16px; vertical-align: middle; overflow: hidden; text-decoration: none!important;">+ Connect</a>
         </div>
 
     </div>
@@ -30,48 +30,40 @@ layout: default
 
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
-                        rotateInUpRight;">
+                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
                     <h2><span>Lead Developer</span></h2>
-                    <p><span>TODO
-                        TODO
-                        TODO.</span></p> <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>Since Apr. 2016</span> <br>
                     <small><span>Sysart Oy</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-gamepad"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
-                        rotateInUpLeft;">
+                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
+                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
                     <h2><span>Software Developer</span></h2>
-                    <p><span>TODO
-                        TODO</span></p>
-                    <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>August. 2015 - March 2016</span> <br>
                     <small><span>CGI Suomi Oy</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
-                        rotateInUpRight;">
+                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
                     <h2><span>Alternative Military Service</span></h2>
-                    <p><span>TODO
-                        TODO
-                        TODO.</span></p> <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>August 2014 - July 2015 </span> <br>
                     <small><span>Töölön Yhteiskoulu ja Aikuislukio</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-gamepad"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
-                        rotateInUpLeft;">
+                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-book"></i> </div>
+                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
                     <h2><span>B.Sc. in Software Engineering</span></h2>
-                    <p><span>TODO
-                        TODO</span></p>
-                    <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>Graduated June 2015</span> <br>
                     <small><span>Metropolia University of Applied Sciences</span></small> </span>
                 </div>
             </div>
@@ -81,57 +73,49 @@ layout: default
                 <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
                         rotateInUpRight;">
                     <h2><span>Software Developer</span></h2>
-                    <p><span>TODO
-                        TODO
-                        TODO.</span></p> <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"> <span>April 2011 - May 2014</span> <br>
                     <small><span>goMob Finland Oy</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-gamepad"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
-                        rotateInUpLeft;">
+                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
+                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
                     <h2><span>Web Developer and SEO Consultant</span></h2>
-                    <p><span>TODO TODO</span></p>
-                    <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>June 2010 - March 2011</span> <br>
                     <small><span>NetBooster Finland Oy</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
-                        rotateInUpRight;">
+                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
                     <h2><span>Internet Marketing Assistant</span></h2>
-                    <p><span>TODO
-                        TODO
-                        TODO.</span></p> <span class="vertical-date"><span>Apr. 2016</span> <br>
+                    <p><span>TODO.</span></p>
+                    <span class="vertical-date"><span>Apr. 2008 - December 2008</span> <br>
                     <small><span>Estime Oy</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-gamepad"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpLeft" style="visibility: visible; animation-name:
-                        rotateInUpLeft;">
-                    <h2><span>Misc. Techie stuff</span></h2>
-                    <p><span>TODO
-                        TODO</span></p>
-                    <span class="vertical-date"><span>Apr. 2016</span> <br>
-                    <small><span>Various companies</span></small> </span>
+                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-book"></i> </div>
+                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpRight;">
+                    <h2><span>Vocational Degree in ICT</span></h2>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>Graduated June 2008</span> <br>
+                    <small><span>KEUDA</span></small> </span>
                 </div>
             </div>
 
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
-                        rotateInUpRight;">
-                    <h2><span>Vocational Degree in ICT</span></h2>
-                    <p><span>TODO
-                        TODO
-                        TODO.</span></p> <span class="vertical-date"><span>Apr. 2016</span> <br>
-                    <small><span>KEUDA</span></small> </span>
+                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpLeft;">
+                    <h2><span>Misc. Techie stuff</span></h2>
+                    <p><span>TODO</span></p>
+                    <span class="vertical-date"><span>2005 - 2008</span> <br>
+                    <small><span>Various companies</span></small> </span>
                 </div>
             </div>
 
