--- a/index.html
+++ b/index.html
@@ -28,96 +28,17 @@ layout: default
 
         <div id="vertical-timeline" class="vertical-container light-timeline center-orientation">
 
+        {% for vocation in site.data.timeline %}
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
-                    <h2><span>Lead Developer</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>Since Apr. 2016</span> <br>
-                    <small><span>Sysart Oy</span></small> </span>
+                <div class="vertical-timeline-content wow {% cycle 'classname': 'rotateInUpRight', 'rotateInUpLeft' %}" style="visibility: visible; animation-name: {% cycle 'animationname': 'rotateInUpRight', 'rotateInUpLeft' %};">
+                    <h2><span>{{ vocation.title }}</span></h2>
+                    <p><span>{{ vocation.description }}</span></p>
+                    <span class="vertical-date"><span>{{ vocation.dates }}</span> <br>
+                    <small><span>{{ vocation.organisation }}</span></small> </span>
                 </div>
             </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
-                    <h2><span>Software Developer</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>August. 2015 - March 2016</span> <br>
-                    <small><span>CGI Suomi Oy</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
-                    <h2><span>Alternative Military Service</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>August 2014 - July 2015 </span> <br>
-                    <small><span>Töölön Yhteiskoulu ja Aikuislukio</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-book"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
-                    <h2><span>B.Sc. in Software Engineering</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>Graduated June 2015</span> <br>
-                    <small><span>Metropolia University of Applied Sciences</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow  rotateInUpRight" style="visibility: visible; animation-name:
-                        rotateInUpRight;">
-                    <h2><span>Software Developer</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"> <span>April 2011 - May 2014</span> <br>
-                    <small><span>goMob Finland Oy</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpLeft;">
-                    <h2><span>Web Developer and SEO Consultant</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>June 2010 - March 2011</span> <br>
-                    <small><span>NetBooster Finland Oy</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpRight;">
-                    <h2><span>Internet Marketing Assistant</span></h2>
-                    <p><span>TODO.</span></p>
-                    <span class="vertical-date"><span>Apr. 2008 - December 2008</span> <br>
-                    <small><span>Estime Oy</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-book"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpLeft" style="visibility: visible; animation-name: rotateInUpRight;">
-                    <h2><span>Vocational Degree in ICT</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>Graduated June 2008</span> <br>
-                    <small><span>KEUDA</span></small> </span>
-                </div>
-            </div>
-
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon accent-bg wow rotateIn" style="visibility: visible; animation-name: rotateIn;"> <i class="fa fa-plus-square"></i> </div>
-                <div class="vertical-timeline-content wow rotateInUpRight" style="visibility: visible; animation-name: rotateInUpLeft;">
-                    <h2><span>Misc. Techie stuff</span></h2>
-                    <p><span>TODO</span></p>
-                    <span class="vertical-date"><span>2005 - 2008</span> <br>
-                    <small><span>Various companies</span></small> </span>
-                </div>
-            </div>
+        {% endfor %}
 
         </div>
     </div>
