New color scheme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 
         <h2 class="text-center">Origin Story</h2>
 
-        <div id="vertical-timeline" class="vertical-container light-timeline center-orientation">
+        <div id="vertical-timeline" class="vertical-container dark-timeline center-orientation">
 
         {% for vocation in site.data.timeline %}
             <div class="vertical-timeline-block">
